marto esto es un 10 eh

--- a/React/TpMovies/Fase2-react/package.json
+++ b/React/TpMovies/Fase2-react/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-world-flags": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
